--- a/src/app/unitexam/unitexam.component.html
+++ b/src/app/unitexam/unitexam.component.html
@@ -47,7 +47,7 @@
             <div class="form-group">
               <textarea #comment style="resize:none;" class="form-control" rows="3" placeholder="请输入评论内容..."></textarea>
             </div>
-            <button type="button" class="btn btn-info btn-xs" (click)="commentItem(data.id,comment.value)">发布评论</button>
+            <button type="button" class="btn btn-info btn-xs" (click)="commentItem(i,data.id,comment.value)">发布评论</button>
           </form>
 
         </div>
