--- a/src/app/usercenter/usercenter.component.html
+++ b/src/app/usercenter/usercenter.component.html
@@ -1,4 +1,72 @@
-<p>
-  usercenter works!
-</p>
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=5256036&auto=1&height=66"></iframe>
+<div class="jumbotron">
+  <h3>看云的个人中心</h3>
+
+  <ul class="nav nav-pills">
+    <li role="presentation" class="active">
+      <a href="javascript:void(0)">空间首页</a>
+    </li>
+    <li role="presentation">
+      <a href="javascript:void(0)">个人资料</a>
+    </li>
+
+  </ul>
+</div>
+
+<div class="row">
+  <div class="col-sm-6 col-md-3">
+    <div class="panel panel-default">
+      <div class="panel-heading">头像</div>
+      <div class="panel-body" style="text-align:center">
+          <img style="height:100%;width:100%;display:100%" src="http://i-4.yxdown.com/2016/12/30/KDYwMHgp/27d10cbb-76e9-482e-8e2b-eec3bd94c74f.jpg"
+            alt="...">
+          <div class="caption">
+            <button type="button" class="btn btn-default">编辑头像</button>
+          </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-6">
+    <div class="panel panel-default">
+      <div class="panel-heading">个人资料</div>
+      <div class="panel-body">
+
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-3">
+    <div class="panel panel-default">
+      <div class="panel-heading">好友</div>
+      <div class="panel-body">
+
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="row">
+  <div class="col-sm-6 col-md-3">
+    <div class="panel panel-info">
+      <div class="panel-heading">统计信息</div>
+      <div class="panel-body">
+        Panel content
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-6">
+    <div class="panel panel-info">
+      <div class="panel-heading">动态</div>
+      <div class="panel-body">
+        Panel content
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-3">
+    <div class="panel panel-default">
+      <div class="panel-heading">最近访客</div>
+      <div class="panel-body">
+
+      </div>
+    </div>
+  </div>
+</div>
