--- a/src/app/common/loginmodel/loginmodel.component.html
+++ b/src/app/common/loginmodel/loginmodel.component.html
@@ -1,3 +1,31 @@
-<p>
-  loginmodel works!
-</p>
+<div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false" style="display:block">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <tabset>
+        <tab heading="登陆">
+          <form class="form-horizontal" role="form"  >
+            <div class="form-group">
+              <div class="col-sm-9">
+                <div class="input-group">
+                  <span class="input-group-addon"></span>
+                  <input class="form-control" placeholder="请输入用户名">
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-sm-9">
+                <div class="input-group">
+                  <span class="input-group-addon"></span>
+                  <input class="form-control" placeholder="请输入密码">
+                </div>
+              </div>
+            </div>
+          </form>
+        </tab>
+        <tab heading="注册">Static content 1</tab>
+      </tabset>
+    </div>
+    <!-- /.modal-content -->
+  </div>
+  <!-- /.modal -->
+</div>
