--- a/src/app/unitexam/unitexam.component.html
+++ b/src/app/unitexam/unitexam.component.html
@@ -60,4 +60,7 @@
     <!-- 其中”pAnswers” 为父组件中的属性，[pAnswer] 为子组件的输入;在子组件中使用 @Input() pAnswer 来接受父组件传递的值 -->
     <app-util [pAnswer]="pAnswers" [totleCount]="totleCount" [typeCode]="typeCode" (childResult)="hitResult($event)"></app-util>
   </div>
+  
 </div>
+
+<app-loginmodel *ngIf="1==1" ></app-loginmodel>
