--- a/src/app/common/loginmodel/loginmodel.component.html
+++ b/src/app/common/loginmodel/loginmodel.component.html
@@ -15,26 +15,30 @@
               <div class="form-group">
                 <div class="col-sm-9">
                   <div class="input-group">
-                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                    <input class="form-control" type="text" name="userName" [(ngModel)]="cpaUser.userName" placeholder="请输入用户名">
+                    <span class="input-group-addon">
+                      <i class="glyphicon glyphicon-user"></i>
+                    </span>
+                    <input class="form-control" type="text" name="userName" [(ngModel)]="cpaUser.userName" placeholder="请输入用户名" required>
                   </div>
                 </div>
               </div>
               <div class="form-group">
                 <div class="col-sm-9">
                   <div class="input-group">
-                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                    <input class="form-control" type="password" name="password" [(ngModel)]="cpaUser.password" placeholder="请输入密码">
+                    <span class="input-group-addon">
+                      <i class="glyphicon glyphicon-lock"></i>
+                    </span>
+                    <input class="form-control" type="password" name="password" [(ngModel)]="cpaUser.password" placeholder="请输入密码" required>
                   </div>
                 </div>
               </div>
               <div class="form-group">
                 <div class="row">
                   <div class="col-sm-5 ">
-                    <input class="form-control" type="text" name="validateCode" [(ngModel)]="cpaUser.validateCode" placeholder="请输入验证码">
+                    <input class="form-control" type="text" name="validateCode" [(ngModel)]="cpaUser.validateCode" placeholder="请输入验证码" required>
                   </div>
                   <div class="col-sm-4">
-                    <img src="/api/validateCode" class="changecode" class="img-responsive" title="点击重新获取验证码" alt="验证码" (click)="reloadValidateCode()">
+                    <img src="/api/validateCode" #validateCodeUrl0 class="img-responsive" title="点击重新获取验证码" alt="验证码" (click)="reloadValidateCode()">
                   </div>
                 </div>
               </div>
@@ -45,34 +49,60 @@
               <div class="form-group">
                 <div class="col-sm-9">
                   <div class="input-group">
-                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                    <input class="form-control" type="text" name="userName" [(ngModel)]="registerUser.userName" placeholder="请输入用户名">
+                    <span class="input-group-addon">
+                      <i class="glyphicon glyphicon-user"></i>
+                    </span>
+                    <input class="form-control" type="text" #newUserName="ngModel" [rangeLength]="[5,10]" name="userName" [(ngModel)]="registerUser.userName"
+                      placeholder="请输入用户名">
                   </div>
+                  <div class="alert alert-warning" *ngIf="newUserName.errors?.rangeLength">用户名长度必须在5到10位之间</div>
                 </div>
               </div>
               <div class="form-group">
                 <div class="col-sm-9">
                   <div class="input-group">
-                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                    <input class="form-control" type="password" name="password" [(ngModel)]="registerUser.password" placeholder="请输入密码">
+                    <span class="input-group-addon">
+                      <i class="glyphicon glyphicon-lock"></i>
+                    </span>
+                    <input class="form-control" #firstPassword="ngModel" [rangeLength]="[6,18]" type="password" name="password" [(ngModel)]="registerUser.password"
+                      placeholder="请输入密码">
                   </div>
+                  <div class="alert alert-warning" *ngIf="firstPassword.errors?.rangeLength">密码长度必须在6到18位之间</div>
                 </div>
               </div>
               <div class="form-group">
                 <div class="col-sm-9">
                   <div class="input-group">
-                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                    <input class="form-control" type="password" name="confirmPassword" [(ngModel)]="registerUser.confirmPassword" placeholder="确认密码">
+                    <span class="input-group-addon">
+                      <i class="glyphicon glyphicon-lock"></i>
+                    </span>
+                    <input class="form-control" #secondPassword="ngModel" type="password" name="confirmPassword" [(ngModel)]="registerUser.confirmPassword"
+                      placeholder="确认密码" [equalTo]="firstPassword">
                   </div>
+                  <div class="alert alert-warning" *ngIf="secondPassword.errors?.equalTo">两次输入的密码不一致</div>
                 </div>
               </div>
+              <div class="form-group">
+                <div class="col-sm-9">
+                  <div class="input-group">
+                    <span class="input-group-addon">
+                      <i class="glyphicon glyphicon-envelope"></i>
+                    </span>
+                    <input class="form-control" #registerEmail="ngModel" type="text" name="email" [(ngModel)]="registerUser.email" placeholder="请输入邮箱地址"
+                      email>
+                  </div>
+                  <div class="alert alert-warning" *ngIf="registerEmail.errors?.email">邮箱地址有误</div>
+                </div>
+              </div>
+
               <div class="form-group">
                 <div class="row">
                   <div class="col-sm-5 ">
-                    <input class="form-control" type="text" name="validateCode" [(ngModel)]="registerUser.validateCode" placeholder="请输入验证码">
+                    <input class="form-control" type="text" name="validateCode" [(ngModel)]="registerUser.validateCode" placeholder="请输入验证码"
+                      required>
                   </div>
                   <div class="col-sm-4">
-                    <img src="/api/validateCode" class="changecode" class="img-responsive" title="点击重新获取验证码" alt="验证码" (click)="reloadValidateCode()">
+                    <img src="/api/validateCode" #validateCodeUrl1 class="img-responsive" title="点击重新获取验证码" alt="验证码" (click)="reloadValidateCode()">
                   </div>
                 </div>
               </div>
