--- a/src/app/common/loginmodel/loginmodel.component.html
+++ b/src/app/common/loginmodel/loginmodel.component.html
@@ -18,8 +18,11 @@
                     <span class="input-group-addon">
                       <i class="glyphicon glyphicon-user"></i>
                     </span>
-                    <input class="form-control" type="text" name="userName" [(ngModel)]="cpaUser.userName" placeholder="请输入用户名" required>
+                    <input class="form-control" type="text" #loginUserName='ngModel' name="userName" [(ngModel)]="cpaUser.userName" placeholder="请输入用户名"
+                      required>
                   </div>
+                  <div class="alert alert-warning" *ngIf="ifshow">{{msg}}</div>
+                  <div class="alert alert-warning" *ngIf="loginUserName.errors?.required">验证码不能为空</div>
                 </div>
               </div>
               <div class="form-group">
@@ -28,19 +31,26 @@
                     <span class="input-group-addon">
                       <i class="glyphicon glyphicon-lock"></i>
                     </span>
-                    <input class="form-control" type="password" name="password" [(ngModel)]="cpaUser.password" placeholder="请输入密码" required>
+                    <input class="form-control" #loginPassword='ngModel' type="password" name="password" [(ngModel)]="cpaUser.password" placeholder="请输入密码"
+                      required>
                   </div>
+                  <div class="alert alert-warning" *ngIf="ifshow">{{msg}}</div>
+                  <div class="alert alert-warning" *ngIf="loginPassword.errors?.required">验证码不能为空</div>
                 </div>
               </div>
               <div class="form-group">
                 <div class="row">
                   <div class="col-sm-5 ">
-                    <input class="form-control" type="text" name="validateCode" [(ngModel)]="cpaUser.validateCode" placeholder="请输入验证码" required>
+                    <input class="form-control" type="text" #loginValidateCode="ngModel" name="validateCode" [(ngModel)]="cpaUser.validateCode"
+                      placeholder="请输入验证码" required>
                   </div>
                   <div class="col-sm-4">
                     <img src="/api/validateCode" #validateCodeUrl0 class="img-responsive" title="点击重新获取验证码" alt="验证码" (click)="reloadValidateCode()">
                   </div>
                 </div>
+                <div class="alert alert-warning" *ngIf="ifshow1">{{msg}}</div>
+                <div class="alert alert-warning" *ngIf="loginValidateCode.errors?.required">验证码不能为空</div>
+
               </div>
             </form>
           </tab>
@@ -98,13 +108,14 @@
               <div class="form-group">
                 <div class="row">
                   <div class="col-sm-5 ">
-                    <input class="form-control" type="text" name="validateCode" [(ngModel)]="registerUser.validateCode" placeholder="请输入验证码"
-                      required>
+                    <input class="form-control" #registerValidateCode="ngModel" type="text" name="validateCode" [(ngModel)]="registerUser.validateCode"
+                      placeholder="请输入验证码" required>
                   </div>
                   <div class="col-sm-4">
                     <img src="/api/validateCode" #validateCodeUrl1 class="img-responsive" title="点击重新获取验证码" alt="验证码" (click)="reloadValidateCode()">
                   </div>
                 </div>
+                <div class="alert alert-warning" *ngIf="registerValidateCode.errors?.required">验证码不能为空</div>
               </div>
             </form>
           </tab>
