--- a/src/app/common/loginmodel/loginmodel.component.html
+++ b/src/app/common/loginmodel/loginmodel.component.html
@@ -22,7 +22,7 @@
                       required>
                   </div>
                   <div class="alert alert-warning" *ngIf="ifshow">{{msg}}</div>
-                  <div class="alert alert-warning" *ngIf="loginUserName.errors?.required">验证码不能为空</div>
+                  <div class="alert alert-warning" *ngIf="loginUserName.errors?.required">用户名不能为空</div>
                 </div>
               </div>
               <div class="form-group">
@@ -35,14 +35,14 @@
                       required>
                   </div>
                   <div class="alert alert-warning" *ngIf="ifshow">{{msg}}</div>
-                  <div class="alert alert-warning" *ngIf="loginPassword.errors?.required">验证码不能为空</div>
+                  <div class="alert alert-warning" *ngIf="loginPassword.errors?.required">密码不能为空</div>
                 </div>
               </div>
               <div class="form-group">
                 <div class="row">
                   <div class="col-sm-5 ">
                     <input class="form-control" type="text" #loginValidateCode="ngModel" name="validateCode" [(ngModel)]="cpaUser.validateCode"
-                      placeholder="请输入验证码" required>
+                      placeholder="请输入验证码" required >
                   </div>
                   <div class="col-sm-4">
                     <img src="/api/validateCode" #validateCodeUrl0 class="img-responsive" title="点击重新获取验证码" alt="验证码" (click)="reloadValidateCode()">
