--- a/src/app/common/loginmodel/loginmodel.component.html
+++ b/src/app/common/loginmodel/loginmodel.component.html
@@ -11,8 +11,8 @@
       <div class="modal-body">
         <tabset>
           <tab (select)="changeLoginSchema()" heading="登陆">
-            <form class="form-horizontal" role="form" autocomplete="on">
-              <div class="form-group">
+            <form class="form-horizontal" role="form" autocomplete="on" #loginForm="ngForm">
+              <div class="form-group" [ngClass]="{'has-error':loginUserName.errors?.required && loginUserName.touched}">
                 <div class="col-sm-9">
                   <div class="input-group">
                     <span class="input-group-addon">
@@ -22,10 +22,10 @@
                       required>
                   </div>
                   <div class="alert alert-warning" *ngIf="ifshow">{{msg}}</div>
-                  <div class="alert alert-warning" *ngIf="loginUserName.errors?.required">用户名不能为空</div>
+                  <span class="help-block" *ngIf="loginUserName.errors?.required && loginUserName.touched">用户名不能为空</span>
                 </div>
               </div>
-              <div class="form-group">
+              <div class="form-group" [ngClass]="{'has-error':loginPassword.errors?.required && loginPassword.touched}">
                 <div class="col-sm-9">
                   <div class="input-group">
                     <span class="input-group-addon">
@@ -35,28 +35,32 @@
                       required>
                   </div>
                   <div class="alert alert-warning" *ngIf="ifshow">{{msg}}</div>
-                  <div class="alert alert-warning" *ngIf="loginPassword.errors?.required">密码不能为空</div>
+                  <span class="help-block" *ngIf="loginPassword.errors?.required && loginPassword.touched">密码不能为空</span>
                 </div>
               </div>
-              <div class="form-group">
+              <div class="form-group" [ngClass]="{'has-error':loginValidateCode.errors?.required && loginValidateCode.touched}">
                 <div class="row">
                   <div class="col-sm-5 ">
-                    <input class="form-control" type="text" #loginValidateCode="ngModel" name="validateCode" [(ngModel)]="cpaUser.validateCode"
-                      placeholder="请输入验证码" required >
+                    <div class="input-group">
+                      <span class="input-group-addon">
+                        <i class="glyphicon glyphicon-alert"></i>
+                      </span>
+                      <input class="form-control" type="text" #loginValidateCode="ngModel" name="validateCode" [(ngModel)]="cpaUser.validateCode"
+                        placeholder="请输入验证码" required>
+                    </div>
                   </div>
                   <div class="col-sm-4">
                     <img src="/api/validateCode" #validateCodeUrl0 class="img-responsive" title="点击重新获取验证码" alt="验证码" (click)="reloadValidateCode()">
                   </div>
                 </div>
                 <div class="alert alert-warning" *ngIf="ifshow1">{{msg}}</div>
-                <div class="alert alert-warning" *ngIf="loginValidateCode.errors?.required">验证码不能为空</div>
-
+                <span class="help-block" *ngIf="loginValidateCode.errors?.required && loginValidateCode.touched">验证码不能为空</span>
               </div>
             </form>
           </tab>
           <tab (select)="changeRegisterSchema()" heading="注册">
-            <form class="form-horizontal" role="form">
-              <div class="form-group">
+            <form class="form-horizontal" role="form" #registerForm="ngForm">
+              <div class="form-group" [ngClass]="{'has-error':newUserName.errors?.rangeLength}">
                 <div class="col-sm-9">
                   <div class="input-group">
                     <span class="input-group-addon">
@@ -65,10 +69,10 @@
                     <input class="form-control" type="text" #newUserName="ngModel" [rangeLength]="[5,10]" name="userName" [(ngModel)]="registerUser.userName"
                       placeholder="请输入用户名">
                   </div>
-                  <div class="alert alert-warning" *ngIf="newUserName.errors?.rangeLength">用户名长度必须在5到10位之间</div>
+                  <span class="help-block" *ngIf="newUserName.errors?.rangeLength">用户名长度必须在5到10位之间</span>
                 </div>
               </div>
-              <div class="form-group">
+              <div class="form-group" [ngClass]="{'has-error':firstPassword.errors?.rangeLength}">
                 <div class="col-sm-9">
                   <div class="input-group">
                     <span class="input-group-addon">
@@ -77,10 +81,10 @@
                     <input class="form-control" #firstPassword="ngModel" [rangeLength]="[6,18]" type="password" name="password" [(ngModel)]="registerUser.password"
                       placeholder="请输入密码">
                   </div>
-                  <div class="alert alert-warning" *ngIf="firstPassword.errors?.rangeLength">密码长度必须在6到18位之间</div>
+                  <span class="help-block" *ngIf="firstPassword.errors?.rangeLength">密码长度必须在6到18位之间</span>
                 </div>
               </div>
-              <div class="form-group">
+              <div class="form-group" [ngClass]="{'has-error':secondPassword.errors?.equalTo}">
                 <div class="col-sm-9">
                   <div class="input-group">
                     <span class="input-group-addon">
@@ -89,10 +93,10 @@
                     <input class="form-control" #secondPassword="ngModel" type="password" name="confirmPassword" [(ngModel)]="registerUser.confirmPassword"
                       placeholder="确认密码" [equalTo]="firstPassword">
                   </div>
-                  <div class="alert alert-warning" *ngIf="secondPassword.errors?.equalTo">两次输入的密码不一致</div>
+                  <span class="help-block" *ngIf="secondPassword.errors?.equalTo">两次输入的密码不一致</span>
                 </div>
               </div>
-              <div class="form-group">
+              <div class="form-group" [ngClass]="{'has-error':registerEmail.errors?.email && registerEmail.touched}">
                 <div class="col-sm-9">
                   <div class="input-group">
                     <span class="input-group-addon">
@@ -101,30 +105,35 @@
                     <input class="form-control" #registerEmail="ngModel" type="text" name="email" [(ngModel)]="registerUser.email" placeholder="请输入邮箱地址"
                       email>
                   </div>
-                  <div class="alert alert-warning" *ngIf="registerEmail.errors?.email">邮箱地址有误</div>
+                  <span class="help-block" *ngIf="registerEmail.errors?.email && registerEmail.touched">邮箱地址有误</span>
                 </div>
               </div>
 
-              <div class="form-group">
+              <div class="form-group" [ngClass]="{'has-error':registerValidateCode.errors?.required && registerValidateCode.touched}">
                 <div class="row">
                   <div class="col-sm-5 ">
-                    <input class="form-control" #registerValidateCode="ngModel" type="text" name="validateCode" [(ngModel)]="registerUser.validateCode"
-                      placeholder="请输入验证码" required>
+                    <div class="input-group">
+                      <span class="input-group-addon">
+                        <i class="glyphicon glyphicon-alert"></i>
+                      </span>
+                      <input class="form-control" #registerValidateCode="ngModel" type="text" name="validateCode" [(ngModel)]="registerUser.validateCode"
+                        placeholder="请输入验证码" required>
+                    </div>
                   </div>
                   <div class="col-sm-4">
                     <img src="/api/validateCode" #validateCodeUrl1 class="img-responsive" title="点击重新获取验证码" alt="验证码" (click)="reloadValidateCode()">
                   </div>
                 </div>
-                <div class="alert alert-warning" *ngIf="registerValidateCode.errors?.required">验证码不能为空</div>
+                <span class="help-block" *ngIf="registerValidateCode.errors?.required && registerValidateCode.touched">验证码不能为空</span>
               </div>
             </form>
           </tab>
         </tabset>
       </div>
       <div class="modal-footer" [ngSwitch]="schema">
-        <button *ngSwitchCase=1 type="submit" class="btn btn-primary" (click)="login()">登陆</button>
-        <button *ngSwitchCase=0 type="submit" class="btn btn-primary" (click)="register()">注册</button>
-        <button *ngSwitchDefault type="submit" class="btn btn-primary" (click)="login()">登陆</button>
+        <button *ngSwitchCase=1 type="submit" [disabled]="!loginForm.form.valid" class="btn btn-primary" (click)="login()">登陆</button>
+        <button *ngSwitchCase=0 type="submit" [disabled]="!registerForm.form.valid" class="btn btn-primary" (click)="register()">注册</button>
+        <button *ngSwitchDefault type="submit" [disabled]="!loginForm.form.valid" class="btn btn-primary" (click)="login()">登陆</button>
         <button (click)="onHidden()" type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
       </div>
     </div>
