--- a/src/app/common/loginmodel/loginmodel.component.html
+++ b/src/app/common/loginmodel/loginmodel.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="isModalShown" [config]="{ show: true }" bsModal #loginModal="bs-modal" class="modal fade" tabindex="-1" role="dialog"
+<div *ngIf="isModalShown" [config]="{ show: true,keyboard: false,ignoreBackdropClick: true }" bsModal #loginModal="bs-modal" class="modal fade" tabindex="-1" role="dialog"
   aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
