--- a/src/app/common/loginmodel/loginmodel.component.html
+++ b/src/app/common/loginmodel/loginmodel.component.html
@@ -1,5 +1,5 @@
-<div *ngIf="isModalShown" [config]="{ show: true,keyboard: false,ignoreBackdropClick: true }" bsModal #loginModal="bs-modal" class="modal fade" tabindex="-1" role="dialog"
-  aria-hidden="true">
+<div *ngIf="isModalShown" [config]="{ show: true,keyboard: false,ignoreBackdropClick: true }" bsModal #loginModal="bs-modal"
+  class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <!-- <div class="modal-header">
@@ -10,10 +10,11 @@
       </div> -->
       <div class="modal-body">
         <tabset>
-          <tab (select)="changeLoginSchema()" heading="登陆">
+          <tab (select)="changeLoginSchema()" heading="登陆" class="container">
+            <br>
             <form class="form-horizontal" role="form" autocomplete="on" #loginForm="ngForm">
               <div class="form-group" [ngClass]="{'has-error':loginUserName.errors?.required && loginUserName.touched || ifshow}">
-                <div class="col-sm-9">
+                <div class="col-md-5">
                   <div class="input-group">
                     <span class="input-group-addon">
                       <i class="glyphicon glyphicon-user"></i>
@@ -26,7 +27,7 @@
                 </div>
               </div>
               <div class="form-group" [ngClass]="{'has-error':loginPassword.errors?.required && loginPassword.touched || ifshow}">
-                <div class="col-sm-9">
+                <div class="col-md-5">
                   <div class="input-group">
                     <span class="input-group-addon">
                       <i class="glyphicon glyphicon-lock"></i>
@@ -39,29 +40,29 @@
                 </div>
               </div>
               <div class="form-group" [ngClass]="{'has-error':loginValidateCode.errors?.required && loginValidateCode.touched || ifshow1}">
-                <div class="row">
-                  <div class="col-sm-5 ">
-                    <div class="input-group">
-                      <span class="input-group-addon">
-                        <i class="glyphicon glyphicon-alert"></i>
-                      </span>
-                      <input class="form-control" type="text" #loginValidateCode="ngModel" name="validateCode" [(ngModel)]="cpaUser.validateCode"
-                        placeholder="请输入验证码" required>
-                    </div>
+                <div class="col-md-3 ">
+                  <div class="input-group">
+                    <span class="input-group-addon">
+                      <i class="glyphicon glyphicon-alert"></i>
+                    </span>
+                    <input class="form-control" type="text" #loginValidateCode="ngModel" name="validateCode" [(ngModel)]="cpaUser.validateCode"
+                      placeholder="请输入验证码" required>
                   </div>
-                  <div class="col-sm-4">
-                    <img src="/api/validateCode" #validateCodeUrl0 class="img-responsive" title="点击重新获取验证码" alt="验证码" (click)="reloadValidateCode()">
-                  </div>
+                  <span class="help-block" *ngIf="ifshow1">{{msg}}</span>
+                  <span class="help-block" *ngIf="loginValidateCode.errors?.required && loginValidateCode.touched">验证码不能为空</span>
                 </div>
-                <span class="help-block" *ngIf="ifshow1">{{msg}}</span>
-                <span class="help-block" *ngIf="loginValidateCode.errors?.required && loginValidateCode.touched">验证码不能为空</span>
+                <div class="col-md-2">
+                  <img src="/api/validateCode" #validateCodeUrl0 class="img-responsive" title="点击重新获取验证码" alt="验证码" (click)="reloadValidateCode()">
+                </div>
+
               </div>
             </form>
           </tab>
-          <tab (select)="changeRegisterSchema()" heading="注册">
-            <form class="form-horizontal" role="form" #registerForm="ngForm">
+          <tab (select)="changeRegisterSchema()" heading="注册" class="container">
+            <br>
+            <form class="form-horizontal center-vertical" role="form" #registerForm="ngForm">
               <div class="form-group" [ngClass]="{'has-error':newUserName.errors?.rangeLength}">
-                <div class="col-sm-9">
+                <div class="col-md-5">
                   <div class="input-group">
                     <span class="input-group-addon">
                       <i class="glyphicon glyphicon-user"></i>
@@ -73,7 +74,7 @@
                 </div>
               </div>
               <div class="form-group" [ngClass]="{'has-error':firstPassword.errors?.rangeLength}">
-                <div class="col-sm-9">
+                <div class="col-md-5">
                   <div class="input-group">
                     <span class="input-group-addon">
                       <i class="glyphicon glyphicon-lock"></i>
@@ -85,7 +86,7 @@
                 </div>
               </div>
               <div class="form-group" [ngClass]="{'has-error':secondPassword.errors?.equalTo}">
-                <div class="col-sm-9">
+                <div class="col-md-5">
                   <div class="input-group">
                     <span class="input-group-addon">
                       <i class="glyphicon glyphicon-lock"></i>
@@ -97,7 +98,7 @@
                 </div>
               </div>
               <div class="form-group" [ngClass]="{'has-error':registerEmail.errors?.email && registerEmail.touched}">
-                <div class="col-sm-9">
+                <div class="col-md-5">
                   <div class="input-group">
                     <span class="input-group-addon">
                       <i class="glyphicon glyphicon-envelope"></i>
@@ -110,21 +111,19 @@
               </div>
 
               <div class="form-group" [ngClass]="{'has-error':registerValidateCode.errors?.required && registerValidateCode.touched}">
-                <div class="row">
-                  <div class="col-sm-5 ">
-                    <div class="input-group">
-                      <span class="input-group-addon">
-                        <i class="glyphicon glyphicon-alert"></i>
-                      </span>
-                      <input class="form-control" #registerValidateCode="ngModel" type="text" name="validateCode" [(ngModel)]="registerUser.validateCode"
-                        placeholder="请输入验证码" required>
-                    </div>
+                <div class="col-md-3 ">
+                  <div class="input-group">
+                    <span class="input-group-addon">
+                      <i class="glyphicon glyphicon-alert"></i>
+                    </span>
+                    <input class="form-control" #registerValidateCode="ngModel" type="text" name="validateCode" [(ngModel)]="registerUser.validateCode"
+                      placeholder="请输入验证码" required>
                   </div>
-                  <div class="col-sm-4">
-                    <img src="/api/validateCode" #validateCodeUrl1 class="img-responsive" title="点击重新获取验证码" alt="验证码" (click)="reloadValidateCode()">
-                  </div>
+                  <span class="help-block" *ngIf="registerValidateCode.errors?.required && registerValidateCode.touched">验证码不能为空</span>
                 </div>
-                <span class="help-block" *ngIf="registerValidateCode.errors?.required && registerValidateCode.touched">验证码不能为空</span>
+                <div class="col-sm-2">
+                  <img src="/api/validateCode" #validateCodeUrl1 class="img-responsive" title="点击重新获取验证码" alt="验证码" (click)="reloadValidateCode()">
+                </div>
               </div>
             </form>
           </tab>
