--- a/src/app/unitexam/unitexam.component.html
+++ b/src/app/unitexam/unitexam.component.html
@@ -48,9 +48,9 @@
           </ul>
           <form role="form" style="text-align:right" *ngIf="commentIndexs[i]" #commentForm="ngForm">
             <div class="form-group">
-              <textarea name="commentContent" #comment="ngModel" [(ngModel)]="commentContent[i]" style="resize:none;" class="form-control" rows="3" placeholder="请输入评论内容..." required></textarea>
+              <textarea name="commentContent" #comment="ngModel" [(ngModel)]="commentContent[i]" style="resize:none;" class="form-control" rows="3" placeholder="请输入评论内容..." required [maxlength]="200"></textarea>
             </div>
-            <button type="button" [disabled]="!commentForm.valid" class="btn btn-info btn-xs" (click)="commentItem(i,data.id,comment.value)">发布评论</button>
+            <button type="button" [disabled]="!commentForm.form.valid" class="btn btn-info btn-xs" (click)="commentItem(i,data.id,comment.value)">发布评论</button>
 
           </form>
           <div>
