--- a/src/app/util/util.component.html
+++ b/src/app/util/util.component.html
@@ -4,6 +4,7 @@
 <div class="panel panel-default" style="position: fixed">
   <div class="panel-body">
     <button type="button" class="btn btn-info" (click)="chooseModel()">提交</button>
+    <button type="button" class="btn btn-info" (click)="downloadItem()">下载试题</button>
   </div>
 </div>
 
