--- a/src/app/usercenter/usercenter.component.html
+++ b/src/app/usercenter/usercenter.component.html
@@ -17,7 +17,7 @@
     <div class="panel panel-default">
       <div class="panel-heading">头像</div>
       <div class="panel-body" style="text-align:center">
-          <img style="height:100%;width:100%;display:100%" src="http://i-4.yxdown.com/2016/12/30/KDYwMHgp/27d10cbb-76e9-482e-8e2b-eec3bd94c74f.jpg"
+          <img style="height:100%;width:100%;display:100%" src="touxiang.jpeg"
             alt="...">
           <div class="caption">
             <button type="button" class="btn btn-default">编辑头像</button>
