--- a/src/app/usercenter/usercenter.component.html
+++ b/src/app/usercenter/usercenter.component.html
@@ -17,7 +17,7 @@
     <div class="panel panel-default">
       <div class="panel-heading">头像</div>
       <div class="panel-body" style="text-align:center">
-          <img style="height:100%;width:100%;display:100%" src="http://kanyun123.3vcm.net/touxiang.jpeg"
+          <img #headImg style="height:100%;width:100%;display:100%"  src="http://kanyun123.3vcm.net/touxiang.jpeg"
             alt="...">
           <div class="caption">
             <input type="file" ng2FileSelect  [uploader]="uploader" (change)="selectedFileOnChanged($event)" >
